<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screen2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#B8B6BC"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="5dp"
      >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="110dp"
            android:text="@string/user"
            android:textSize="23sp"
            android:textAlignment="center"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:layout_width="37dp"
            android:layout_height="33dp"

            android:src="@drawable/settings">

        </ImageView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:gravity="left"
        android:padding="10dp">


        <ImageView
            android:layout_width="135dp"
            android:layout_height="153dp"

            android:src="@drawable/account">

        </ImageView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/post"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/posts"
                android:textAlignment="center"
                android:textSize="16sp">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/follower"
                android:textSize="23sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/followers"
                 android:layout_marginLeft="8dp"
                android:textSize="16sp">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/following"
                android:textSize="23sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/followings"
                android:textAlignment="center"
                android:textSize="16sp">

            </TextView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/edit"
            android:textSize="10sp">



        </Button>

    </LinearLayout>
</LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/your_name"
            android:textSize="20sp"
            android:textStyle="bold"


            >


        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bio"
            android:textSize="18sp"

            >


        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/link"
            android:textSize="18sp"
            android:textColor="#007FE5"


            >


        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >


            <ImageView
                android:layout_width="49dp"
                android:layout_height="26dp"
                android:layout_gravity="left"

                android:layout_marginLeft="10dp"
                android:src="@drawable/grid">

            </ImageView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
           android:layout_marginLeft="50dp"
            android:orientation="horizontal"

            >


            <ImageView
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:layout_gravity="left"
                android:src="@drawable/menu"

                >


            </ImageView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal"

            >


            <ImageView
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:layout_gravity="left"
                android:src="@drawable/location"

                >


            </ImageView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal"

            >


            <ImageView
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:layout_gravity="left"
                android:src="@drawable/mention"

                >


            </ImageView>


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        >

        <ImageView
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="left"
            android:src="@drawable/img2">

        </ImageView>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="left"
            android:src="@drawable/img2"
            android:layout_marginLeft="5dp"
            >

        </ImageView>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:src="@drawable/img2">

        </ImageView>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        >

        <ImageView
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="left"
            android:src="@drawable/img2">

        </ImageView>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="left"
            android:src="@drawable/img2"
            android:layout_marginLeft="5dp"
            >

        </ImageView>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:src="@drawable/img2">

        </ImageView>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        >

        <ImageView
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="left"
            android:src="@drawable/img2">

        </ImageView>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="left"
            android:src="@drawable/img2"
            android:layout_marginLeft="5dp"
            >

        </ImageView>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:src="@drawable/img2">

        </ImageView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_gravity="end"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="44dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:src="@drawable/home"

                ></ImageView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal"

            >


            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:src="@drawable/search"

                >


            </ImageView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"

            >


            <ImageView
                android:layout_width="50dp"
                android:layout_height="39dp"
                android:layout_gravity="left"

                android:src="@drawable/camera"

                >


            </ImageView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"

            >


            <ImageView
                android:layout_width="50dp"
                android:layout_height="44dp"
                android:layout_gravity="left"
                android:src="@drawable/heart"

                >


            </ImageView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"

            >


            <ImageView
                android:layout_width="50dp"
                android:layout_height="37dp"
                android:layout_gravity="left"
                android:src="@drawable/profile"

                >


            </ImageView>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</ScrollView>